# ClipCascade

./: .gitignore  README.md  metadata.json  version.json
.github/: FUNDING.yml
ClipCascade_Desktop/: .gitignore
ClipCascade_Desktop/apps/: ClipCascade_Linux.tar.xz
ClipCascade_Desktop/clipcascade/: .gitignore
ClipCascade_Desktop/clipcascade/src/: main.py  requirements.txt
ClipCascade_Desktop/clipcascade/src/clip_mon/: clipboard_monitor.py
ClipCascade_Desktop/clipcascade/src/gui/: tray.py
ClipCascade_Desktop/clipcascade/src/stomp_ws/: client.py
ClipCascade_Desktop/clipcascade_linux/: .gitignore
ClipCascade_Desktop/clipcascade_linux/src/: main.py  requirements.txt
ClipCascade_Desktop/clipcascade_linux/src/gui/: info.py  login.py  tray.py
ClipCascade_Desktop/clipcascade_linux_terminal/: .gitignore
ClipCascade_Desktop/clipcascade_linux_terminal/src/: main.py  requirements.txt
ClipCascade_Desktop/clipcascade_linux_terminal/src/clip_mon/: clipboard_monitor.py
ClipCascade_Desktop/clipcascade_linux_terminal/src/no_gui/: info.py  login.py  tray.py
ClipCascade_Desktop/clipcascade_linux_terminal/src/stomp_ws/: client.py
ClipCascade_Desktop/clipcascade_macos/: .gitignore
ClipCascade_Desktop/clipcascade_macos/src/: ClipCascade.spec  main.py  requirements.txt
ClipCascade_Desktop/clipcascade_macos/src/clip_mon/: clipboard_monitor.py
ClipCascade_Desktop/clipcascade_macos/src/gui/: tray.py
ClipCascade_Desktop/clipcascade_macos/src/stomp_ws/: client.py
ClipCascade_Desktop/src/: .gitignore  ClipCascade_macos.spec  ClipCascade_win.spec  main.py  pyproject.toml  requirements_linux.txt  requirements_linux_cli.txt  requirements_linux_gui.txt  requirements_mac.txt  requirements_win.txt
ClipCascade_Desktop/src/cli/: echo.py  info.py  login.py  message_box.py  tray.py
ClipCascade_Desktop/src/clipboard/: clipboard_manager.py  clipboard_monitor_linux.py  clipboard_monitor_mac.py  clipboard_monitor_win.py
ClipCascade_Desktop/src/core/: application.py  config.py  constants.py
ClipCascade_Desktop/src/gui/: info.py  login.py  message_box.py  tray.py
ClipCascade_Desktop/src/interfaces/: ws_interface.py
ClipCascade_Desktop/src/p2p/: p2p_manager.py
ClipCascade_Desktop/src/stomp_ws/: client.py  frame.py  stomp_manager.py
ClipCascade_Desktop/src/utils/: cipher_manager.py  notification_manager.py  request_manager.py  ssl_helper.py  window_manager.py
ClipCascade_Mobile/: .gitignore
ClipCascade_Mobile/src/: App.js  AsyncStorageManagement.js  HeadlessTask.js  StartForegroundService.js  app.json  index.js  package-lock.json  package.json
ClipCascade_Mobile/src/android/: settings.gradle
ClipCascade_Mobile/src/android/app/: build.gradle
ClipCascade_Mobile/src/android/app/src/main/: AndroidManifest.xml
ClipCascade_Mobile/src/ios/: Podfile
ClipCascade_Mobile/src/ios/ClipCascade/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ClipCascade_Mobile/src/ios/ClipCascade.xcodeproj/: project.pbxproj
ClipCascade_Mobile/src/ios/ClipCascade.xcodeproj/xcshareddata/xcschemes/: ClipCascade.xcscheme
ClipCascade_Mobile/src/ios/ClipCascadeTests/: ClipCascadeTests.m
ClipCascade_Server/: .gitignore
ClipCascade_Server/ClipCascade/: Dockerfile  pom.xml
ClipCascade_Server/ClipCascade/src/main/resources/: application.properties
ClipCascade_Server/ClipCascade/src/main/resources/static/: app.js  index.html  main.css
ClipCascade_Server/ClipCascade_Backend/: .gitignore  Dockerfile  activemq.xml  jetty.xml  pom.xml
ClipCascade_Server/ClipCascade_Backend/src/main/resources/: application.properties  schema.sql
ClipCascade_Server/docker-compose/: docker-compose-limitless-data-transfer.yml  docker-compose-multi-users.yml  docker-compose-stomp-external-broker.yml  docker-compose.yml  readme.txt
logo/: logo.icns
(+75 files in other folders)
