[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipcascade"
version = "3.1.0"
description = "ClipCascade is a lightweight utility that automatically syncs the clipboard across devices, no key press required."
authors = [{name = "Sathvik Rao", email = "your.email@example.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["dependencies"]

[project.scripts]
clipcascade = "main:main"

[tool.setuptools]
packages = ["cli", "clipboard", "core", "gui", "interfaces", "p2p", "stomp_ws", "utils"]
py-modules = ["main"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements_linux.txt"]}

[project.urls]
Homepage = "https://clipcascade.sathvik.dev/"
Repository = "https://github.com/Sathvik-Rao/ClipCascade"
Issues = "https://github.com/Sathvik-Rao/ClipCascade/issues"
